--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "3.0.0",
     "reactstrap": "^8.0.0"
   },
+  "homepage":"https://benjaminsgriggs.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
