--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "react": "^16.8.6",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
+    "react-image-gallery": "^0.8.18",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "reactstrap": "^8.0.0"
   },
-  "homepage":"https://benjaminsgriggs.com",
+  "homepage": "https://benjaminsgriggs.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
