--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "homepage": "https://benjaminsgriggs.com",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=443 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -36,5 +36,6 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0"
-  }
+  },
+  "proxy": "http://localhost:442"
 }
