--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.8.6",
     "react-image-gallery": "^0.8.18",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^3.3.0",
     "reactstrap": "^8.0.0"
   },
   "homepage": "https://benjaminsgriggs.com",
